--- a/index.html
+++ b/index.html
@@ -133,12 +133,12 @@
         <form action="" method="POST">
           <div>
             <label for="name">Name : </label>
-            <input type="text" id="name" name="name" placeholder="enter your name " required />
+            <input type="text" id="name" name="name" placeholder="enter your name please " required />
           </div>
 
           <div>
             <label for="email">Email : </label>
-            <input type="email" id="email" name="email" placeholder="enter your email " required />
+            <input type="email" id="email" name="email" placeholder="enter your email please" required />
           </div>
 
           
